WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205794
Fix non unified build in FIDO Pin.cpp
https://bugs.webkit.org/show_bug.cgi?id=205794
Summary
Fix non unified build in FIDO Pin.cpp
youenn fablet
Reported
2020-01-06 04:32:46 PST
Fix unified build in FIDO Pin.cpp
Attachments
Patch
(1.34 KB, patch)
2020-01-06 04:33 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.39 KB, patch)
2020-01-06 05:08 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(2.64 KB, patch)
2020-01-06 11:07 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-01-06 04:33:49 PST
Created
attachment 386831
[details]
Patch
youenn fablet
Comment 2
2020-01-06 05:08:48 PST
Created
attachment 386832
[details]
Patch
Jiewen Tan
Comment 3
2020-01-06 09:41:21 PST
Comment on
attachment 386832
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=386832&action=review
Thanks for catching this bug. My bad.
> Source/WebCore/Modules/webauthn/fido/DeviceResponseConverter.cpp:-47 > -constexpr size_t kResponseCodeLength = 1;
I think it is better to name it CtapDeviceResponseCodeLength = 1 in FidoConstants.h after enum class CtapDeviceResponseCode.
youenn fablet
Comment 4
2020-01-06 11:07:24 PST
Created
attachment 386865
[details]
Patch
Jiewen Tan
Comment 5
2020-01-06 11:17:03 PST
Comment on
attachment 386865
[details]
Patch r=me. Thanks for making the patch.
WebKit Commit Bot
Comment 6
2020-01-06 12:56:48 PST
Comment on
attachment 386865
[details]
Patch Clearing flags on attachment: 386865 Committed
r254079
: <
https://trac.webkit.org/changeset/254079
>
WebKit Commit Bot
Comment 7
2020-01-06 12:56:56 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2020-01-06 13:02:07 PST
<
rdar://problem/58351406
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug