Fix non unified build in FIDO Pin.cpp https://bugs.webkit.org/show_bug.cgi?id=205794

Reviewed by Jiewen Tan.

No change of behavior, this is a build fix.

* Modules/webauthn/fido/Pin.cpp:


Canonical link: https://commits.webkit.org/218950@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254079 268f45cc-cd09-0410-ab3c-d52691b4dbfc